<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PatientDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:ignore="Overdraw">

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status_patient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/background"
        android:visibility="gone">

        <ImageView
            android:id="@+id/spinnerPatientDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/loader"
            android:contentDescription="@string/loading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/one_moment_please"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!-- Search form -->

    <ScrollView
        android:id="@+id/search_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/LoginFormContainer"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/searchForPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/search_for_patient"
                    android:layout_marginLeft="3dp"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:singleLine="true"
                    style="?android:attr/textAppearanceLarge"
                    tools:ignore="RtlHardcoded" />

                <EditText
                    android:id="@+id/patientNHS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/searchForPatient"
                    android:hint="@string/patient_nhs"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="20dp"
                    android:ems="22"
                    android:background="@android:drawable/editbox_background_normal" />

                <Button
                    android:id="@+id/getPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/patientNHS"
                    android:layout_alignLeft="@id/patientNHS"
                    android:layout_alignRight="@id/patientNHS"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="16dp"
                    android:onClick="getPatientClick"
                    android:background="@drawable/button"
                    style="?android:attr/textAppearanceLarge"
                    android:text="@string/get_patient"
                    android:textColor="@color/white"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Patient details -->

    <ScrollView
        android:id="@+id/patient_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:visibility="gone">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/patient_details_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="35sp"
                android:text="@string/patient_details" />

            <TextView
                android:id="@+id/patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/patient_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/patient_postcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/select_disability"
                    android:textStyle="italic"/>

                <RadioGroup
                    android:id="@+id/disability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/no_dissability"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/no_disability"
                        android:checked="true"
                        android:textColor="@color/white"
                        android:button="@drawable/radio"
                        android:textStyle="bold|italic"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/high_contrast_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/high_contrast_mode"
                        android:textColor="@color/white"
                        android:button="@drawable/radio"
                        android:textStyle="bold|italic"
                        android:textSize="25sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:layout_marginTop="16dp"
                    android:onClick="confirmPatientDetailsClick"
                    android:textColor="@color/white"
                    android:background="@drawable/button"
                    style="?android:attr/textAppearanceLarge"
                    android:text="@string/confirm_patient_details" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>